# lattice

./: .commit-msg.txt  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .npmrc  .pr-body.md  .prettierignore  .yamllint.yml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  commitlint.config.cjs  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  tsconfig.base.json  turbo.json
.cursor/plans/: lattice-phase-plan_0a02a0ca.plan.md
.cursor/rules/: github-workflow.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml  milestones.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/issues/: epics.yml  v0.1-tasks.yml  v0.2-tasks.yml  v0.3-tasks.yml
.github/scripts/: .gitignore  bootstrap-issues.mjs  bootstrap-project.mjs  bootstrap-repo.mjs  package.json  pnpm-lock.yaml  sync-labels.mjs  sync-milestones.mjs
.github/scripts/lib/: gh.mjs  yaml.mjs
.github/workflows/: bench.yml  ci.yml  commitlint.yml  label-sync.yml  labeler.yml  release.yml  stale.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx  shell.css  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: mod.rs  notes.rs  search.rs  system.rs  vault.rs
apps/desktop/src/__tests__/: setup.ts
apps/desktop/src/commands/: note-commands.ts  registry.ts
apps/desktop/src/components/: CommandPalette.tsx  SearchModal.tsx  SettingsTelemetry.tsx
apps/desktop/src/components/__tests__/: CommandPalette.test.tsx  NoteList.test.tsx  Sidebar.test.tsx  (+1 more)
apps/desktop/src/shell/: EditorPane.tsx  EmptyVault.tsx  NoteList.tsx  Sidebar.tsx  WorkspaceShell.tsx  index.ts  types.ts
core/lattice-ai/: Cargo.toml
core/lattice-ai/src/: lib.rs
core/lattice-core/: Cargo.toml
core/lattice-core/benches/: README.md  indexer_apply.rs  save_index.rs  vault_open.rs  watcher_latency.rs
core/lattice-core/benches/baselines/: .gitkeep
core/lattice-core/benches/baselines/save_index/single_note_insert/main/: benchmark.json  estimates.json  sample.json  tukey.json
core/lattice-core/benches/baselines/vault_open/100/main/: benchmark.json  estimates.json  sample.json  tukey.json
core/lattice-core/benches/baselines/vault_open/1000/main/: benchmark.json  estimates.json  sample.json  tukey.json
core/lattice-core/benches/baselines/watcher_latency/create_to_event_ms/main/: benchmark.json  estimates.json  sample.json  tukey.json
core/lattice-core/examples/: dump_ast.rs
core/lattice-core/migrations/: 0001_init.sql
core/lattice-core/src/: config.rs  db.rs  error.rs  indexer.rs  lib.rs  logging.rs  notes.rs  telemetry.rs  types.rs  vault.rs  watcher.rs
core/lattice-core/src/markdown/: doc.rs  frontmatter.rs  mod.rs  parser.rs  serializer.rs
core/lattice-core/tests/: error_snapshot.rs  indexer_integration.rs  markdown_roundtrip.rs  notes_io.rs  search_integration.rs  vault_lifecycle.rs  watcher_integration.rs
core/lattice-core/tests/snapshots/: error_snapshot__database_variant_shape.snap  error_snapshot__invalid_path_variant_shape.snap  error_snapshot__invalid_query_variant_shape.snap  error_snapshot__io_variant_shape.snap  error_snapshot__migration_variant_shape.snap  error_snapshot__not_found_variant_shape.snap  error_snapshot__search_variant_shape.snap  error_snapshot__telemetry_variant_shape.snap
core/lattice-search/: Cargo.toml
core/lattice-search/benches/: reindex_all.rs  single_doc_add.rs
core/lattice-search/src/: doc.rs  error.rs  exec.rs  hit.rs  index.rs  lib.rs  query.rs  schema.rs
core/lattice-sync/: Cargo.toml
core/lattice-sync/src/: lib.rs
docs/: README.md  faq.md  glossary.md  telemetry.md  vision.md
docs/architecture/: core-overview.md  editor-internals.md  frontend-overview.md  search-internals.md  security.md  sync-internals.md
docs/decisions/: 0000-template.md  0001-tauri-2-cross-platform-shell.md  0002-rust-core-sqlx-sqlite.md  0003-tiptap-prosemirror-editor.md  0004-tantivy-full-text-search.md  0005-yrs-crdt-sync.md  0006-local-first-plain-markdown.md  0007-agpl-3-license.md  0008-pnpm-turborepo-monorepo.md  0009-conventional-commits-trunk-based.md  0010-design-tokens-and-typography.md  0011-font-loading-strategy.md  0012-telemetry-event-schema-versioning.md  0013-vault-conflict-resolution-ux.md  0014-file-watcher-debounce.md  0015-markdown-flavor-and-serialization.md  0016-attachment-storage.md  0017-excalidraw-embed-storage.md  0018-search-query-grammar.md  0019-graph-snapshot-data-shape.md  0020-backlinks-staleness-model.md  README.md
docs/development/: README.md  github-governance.md  monorepo.md
docs/getting-started/: README.md  first-build.md  prerequisites.md  troubleshooting.md
docs/how-to/: README.md  add-a-database-migration.md  add-a-design-token.md  add-a-markdown-roundtrip-fixture.md  add-a-tauri-command.md  add-a-tiptap-extension.md  add-an-adr.md  bump-a-dependency.md  cut-a-release.md  debug-a-flaky-test.md  profile-with-criterion.md  triage-a-bug.md
docs/research/: note-taking-landscape.md
docs/user-guide/: README.md  keyboard-shortcuts.md  markdown-flavor.md  vault-basics.md
scripts/: check-token-parity.mjs
tests/markdown-roundtrip/: README.md  callouts.expected.json  callouts.md  excalidraw-fence.expected.json  excalidraw-fence.md  footnotes.expected.json  footnotes.md  frontmatter-edges.expected.json  frontmatter-edges.md  hard-line-breaks.expected.json  hard-line-breaks.md  headings.expected.json  html-snippet.expected.json  html-snippet.md  lists-nested.expected.json  lists-nested.md  math-inline-block.expected.json  math-inline-block.md  mermaid-fence.expected.json  mermaid-fence.md  simple.expected.json  simple.md  tables-with-pipes-in-code.expected.json  tables-with-pipes-in-code.md  wiki-links.expected.json  wiki-links.md
