[package]
name = "lattice-ai"
description = "Lattice AI provider abstraction (OpenAI / Anthropic / Ollama) + embeddings + RAG."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
