[package]
name = "lattice-core"
description = "Lattice core: vault FS, Markdown parser, SQLite index, file watcher, error model."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
ts-rs = { version = "10", features = ["chrono-impl", "uuid-impl"] }
dirs = "5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
insta = { version = "1.41", features = ["json"] }
tempfile = "3.14"
