[package]
name = "lattice-core"
description = "Lattice core: vault FS, Markdown parser, SQLite index, file watcher, error model."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
ts-rs = { version = "10", features = ["chrono-impl", "uuid-impl"] }
dirs = "5.0"
notify = "7"
notify-debouncer-full = "0.7"
tracing-appender = "0.2"
tracing-subscriber = { workspace = true }
pulldown-cmark = { version = "0.12", default-features = false }
serde_yaml_ng = "0.10"
sha2 = "0.10"
lattice-search = { path = "../lattice-search" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
insta = { version = "1.41", features = ["json"] }
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"
anyhow = { workspace = true }

[[example]]
name = "dump_ast"
path = "examples/dump_ast.rs"

[[bench]]
name = "vault_open"
harness = false

[[bench]]
name = "save_index"
harness = false

[[bench]]
name = "watcher_latency"
harness = false

[[bench]]
name = "indexer_apply"
harness = false
