[package]
name = "lattice-search"
description = "Lattice full-text search: Tantivy wrapper, query DSL, ranking."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tantivy = "0.26"
ts-rs = { version = "10", features = ["chrono-impl"] }

[dev-dependencies]
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"] }
anyhow = { workspace = true }

[[bench]]
name = "reindex_all"
harness = false

[[bench]]
name = "single_doc_add"
harness = false
